--- a/nb.ipynb
+++ b/nb.ipynb
@@ -50,7 +50,7 @@
    "id": "0956deae",
    "metadata": {},
    "source": [
-    "## Initialize the agent"
+    "## Initialize the agent and decide number of epochs"
    ]
   },
   {
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "69b73099",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,6 @@
     }
    ],
    "source": [
-    "n_epochs = 100000\n",
     "trainer = QLearnTrainer()\n",
     "trainer.train(agent, RandomPlayer(opponent_symbol), n_epochs, model_filename)\n",
     "trainer.plot()"
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5034e13f",
    "metadata": {},
    "outputs": [
@@ -136,7 +135,6 @@
     }
    ],
    "source": [
-    "n_epochs = 100000\n",
     "trainer = QLearnTrainer()\n",
     "trainer.train(agent, PerfectStrategyPlayer(opponent_symbol), n_epochs, model_filename)\n",
     "trainer.plot()"
