--- a/nb.ipynb
+++ b/nb.ipynb
@@ -5,12 +5,20 @@
    "id": "e5dc0490",
    "metadata": {},
    "source": [
-    "# AI Projekt Grupp 2"
+    "# AI Projekt Grupp 2 vi siktar på VG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2988ef76",
+   "metadata": {},
+   "source": [
+    "William Mossberg, Viktor Eriksson, Oskar Johansson, Andreas Lindström"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "a19e3424",
    "metadata": {},
    "outputs": [],
